Fix for menus displayed behind the sub menubar

--- a/less/gn_editor_dutch.less
+++ b/less/gn_editor_dutch.less
@@ -42,7 +42,7 @@
   }
   .gn-top-bar {
     display: block !important;
-    z-index: 502;
+    z-index: 502 !important;
     position: fixed;
     top: 0;
     left: 0;
@@ -74,6 +74,7 @@
       border-top: 6px solid @gn-menubar-background-active;
       background-color: #fff;
       box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+      z-index: 501 !important;
       .navbar-text {
         display: none;
       }
